V2.4.0 (January 26th, 2019):
▔▔▔▔▔▔▔▔▔▔▔
App:
 • FIXED: Echo Device Filter not stopping selected devices from being created.
 • FIXED: Updated the UI some for devices.  It's easy to distinguish between unsupported and devices ignored by user.
 • UPDATED: Rewrote the broadcast test logic it works extremely well now.  Devices that are shown to not support TTS are not selectable in the list.
 • UPDATED: Echo Device Filter not stopping selected devices from being created.

Device:
 • FIXED: Speaking long text on ST would through exception
 • FIXED: fixed broken attributes `lastVoiceActivity` and `lastSpokenToTime` from last update.
 • FIXED: wait sequence command was breaking the whole sequence (Multiple waits are having issues).
 • FIXED: Made changes to address the random exception errors on async responses.
 • UPDATED: Speak commands now handle long strings but splitting them into multiple sequence commands and playing them 1 by 1
 • ADDED: Music search available in the sequence commands.
 • ADDED: Speak command now cleans the strings of unnecessary characters.
 • ADDED: Speak command will attempt to transform items like temperature `19F` to 19 degrees and directions `SSW` to south southwest. (This can be disabled under each device)

V2.3.2 (January 23rd, 2019):
▔▔▔▔▔▔▔▔▔▔▔
App:
 • FIXED: Echo Device Filter not stopping selected devices from being created.
 • FIXED: Made changes to address the random exception errors on async responses.

Device:
 • FIXED: Broken sequence commands from v2.3+
 • FIXED: wait sequence command was breaking the whole sequence.
 • FIXED: Made changes to address the random exception errors on async responses.
 • UPDATED: Speak commands now handle long strings but splitting them into multiple sequence commands and playing them 1 by 1

V2.3.1 (January 23rd, 2019):
▔▔▔▔▔▔▔▔▔▔▔
App:
 • FIXED: Significantly reduced the icon sizes by 80-90% to speed up image loading